guides/v7.2.0/code-editors/index.md
During development, add Ember.js specific extensions to your code editor to expand functionality.
Below is a list of some of the extensions available,
many of which are created and maintained by the developer community:

## Visual Studio Code

Visual Studio Code is a code editor optimized for building and debugging modern web applications.
Visual Studio Code is one of the most popular text editors among Ember developers.

### Extension Pack

Install the extension pack to get everything you need to work on Ember.js projects.

[Ember.js Extension Pack](https://marketplace.visualstudio.com/items?itemName=EmberTooling.emberjs) - It will install the following addons

### Syntax Highlighting

[Glimmer Templates Syntax](https://marketplace.visualstudio.com/items?itemName=lifeart.vscode-glimmer-syntax) -
Syntax formatting for glimmer templates.

### Language Server

[Ember Language Server](https://marketplace.visualstudio.com/items?itemName=EmberTooling.vscode-ember) -
Adds enhanced editor features like auto completion and go to definition.

### Workflow

[ESLint](https://marketplace.visualstudio.com/items?itemName=dbaeumer.vscode-eslint) - Integrates ESLint into VS Code.

[EditorConfig for Visual Studio Code](https://marketplace.visualstudio.com/items?itemName=EditorConfig.EditorConfig) -
Attempts to override user/workspace settings with settings found in `.editorconfig` files.
The `.editorconfig` file helps developers define
and maintain consistent coding styles between different editors and IDEs.

[Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode) -
Prettier is an opinionated code formatting tool. It enforces a consistent style by parsing your code and re-printing it with its own rules that take the maximum line length into account, wrapping code when necessary. Prettier supports Handlebars, Ember and Glimmer out of the box.

### Snippets

See instructions on [ember-tooling/snippets](https://github.com/ember-tooling/snippets)

### Typed Glimmer Templates

<div class="cta">
  <div class="cta-note">
    <div class="cta-note-body">
      <div class="cta-note-heading">Zoey says...</div>
      <div class="cta-note-message">
        This is not installed as part of the extension pack but should be considered for Ember projects built with TypeScript. Learn more about <a href="https://typed-ember.gitbook.io/glint/">Glint here</a>.
      </div>
    </div>
    <img src="/images/mascots/zoey.png" role="presentation" alt="">
  </div>
</div>

[Glint](https://marketplace.visualstudio.com/items?itemName=typed-ember.glint-vscode) is a set of tools to aid in developing code that uses the Glimmer VM for rendering, such as Ember.js v3.24+ and GlimmerX projects.

## Neovim

Similar to VSCode's Ember Extension Pack, Neovim has a similar package, [ember.nvim](https://github.com/NullVoxPopuli/ember.nvim), to bundle everything needed to use Ember in Neovim, including syntax highlighting, support glint/typescript, etc.

For a more fine-grained configuration,

### Syntax Highlighting

Included with `ember.nvim`.

[nvim-treesitter](https://github.com/nvim-treesitter/nvim-treesitter) -
high-fidelity static highlighting with support for `.gjs` and `.gts` and embedded `hbs`.
Use `ensure_installed = { 'glimmer' }`.
Example `nvim-treesitter` config [can be found here](https://github.com/NullVoxPopuli/dotfiles/blob/main/home/.config/nvim/lua/plugins/syntax.lua#L15)

### Language Server

Included with `ember.nvim`.

Only one of these solutions should be used at a time.

Native LSP with assistance from [Mason.nvim](https://github.com/williamboman/mason.nvim)
Easily install and manage LSP servers, DAP servers, linters, and formatters.
Example mason+LSP config [can be found here](https://github.com/NullVoxPopuli/dotfiles/tree/main/home/.config/nvim/lua)

or

[Conquer for Completion (COC) for Neovim](https://github.com/neoclide/coc.nvim) -
An IntelliSense engine which takes control over all linting, hinting, and language-server integration.
With the ember plugin [coc-ember](https://github.com/NullVoxPopuli/coc-ember) -
Ember.js language server extension including useful configuration instructions.

### Snippets / Workflow

See instructions on [ember-tooling/snippets](https://github.com/ember-tooling/snippets)

## Vim

Vim is a highly configurable text editor built to make creating and changing any kind of text very efficient.
It is included as "vi" with most UNIX systems and with Apple OS X.

### Syntax Highlighting

#### Vim v9.2.0152 or later

Use the [built-in highlighting support](https://github.com/vim/vim/pull/19569) available in Vim v9.2.0152+ or the latest Neovim (nightly).

#### Older versions:

[vim-ember-hbs](https://github.com/joukevandermaas/vim-ember-hbs) -
Add Ember template syntax highlighting and indentation to Vim.
To get embedded highlighting will involve these additional plugins:

- [vim-javascript](https://github.com/pangloss/vim-javascript)
- [vim-js-pretty-template](https://github.com/Quramy/vim-js-pretty-template)


### Language Server

[ALE](https://github.com/dense-analysis/ale) - a plugin to manage LSP support with Vim. Use the `tsserver` LSP for Glint v2 project or [this config](https://github.com/dense-analysis/ale/pull/5077/changes) for Glint v1 projects

### Snippets / Workflow

[ember.vim](https://github.com/dsawardekar/ember.vim) -
Shortcuts to navigate related files with Ember.js projects.

[Ember Tools](https://github.com/AndrewRadev/ember_tools.vim) -
Various tools for working with Ember.js projects.

## Sublime Text

A sophisticated text editor for code, markup and prose.

### Syntax Highlighting

Use [Package Control](https://packagecontrol.io) to install 2 packages: [Template Tag](https://github.com/ijlee2/sublime-syntax-definition-template-tag) and Handlebars.

1. Open Sublime Text.
1. Open Package Control by pressing <kbd>Cmd</kbd> + <kbd>Shift</kbd> + <kbd>P</kbd> (Mac) or <kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>P</kbd> (Windows). Alternatively, in the menu bar, click on `Sublime Text` > `Settings` > `Package Control`.
1. Type `install` in the search bar so that you can find and select `Package Control: Install Package`.
1. Search for `Template Tag`, then select to install. Repeat steps 2-3 for `Handlebars`.
1. Restart Sublime Text.

### Language Server

Use [Package Control](https://packagecontrol.io) to install 3 packages: LSP, [LSP-ember](https://github.com/ijlee2/LSP-ember), and LSP-typescript. Restart Sublime Text.
